# todo-repository

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  test_todo.py
.github/workflows/: main.yml
services/: ai_agent.py
